syntax = "proto3";
// import "google/protobuf/timestamp.proto";

package grpc.mixer.v1;

message AdaptorOptions {
    string Name = 1;
    string Protocol = 2;
    bool IsProvider = 3;
    string ServicePort = 4;
    string ConnectURL = 5;
    bool  IsTLSEnabled = 6;
    bytes KeyFile = 7;
    bytes CertFile = 8;
}

service Mixer {
    rpc CreateAdaptor(CreateAdaptorRequest) returns (CreateAdaptorResponse) {}
    rpc DeleteAdaptor(DeleteAdaptorRequest) returns (DeleteAdaptorResponse) {}
    rpc GetAdaptorFactories(GetAdaptorFactoriesRequest) returns (GetAdaptorFactoriesResponse) {}
    rpc GetAdaptors(GetAdaptorsRequest) returns (GetAdaptorsResponse) {}
}

message CreateAdaptorRequest {
    string UserID = 1;
    AdaptorOptions AdaptorOptions = 2;
}
message CreateAdaptorResponse {
    string AdaptorID = 1;
}

message DeleteAdaptorRequest {
    string UserID = 1;
    string AdaptorID = 2;
}
message DeleteAdaptorResponse {}


message GetAdaptorFactoriesRequest {}
message GetAdaptorFactoriesResponse {
    repeated string AdaptorFactoryNames = 1;
}

message GetAdaptorsRequest {
    string UserID = 1;
}
message GetAdaptorsResponse {
    repeated AdaptorOptions AdaptorOptions = 1;
}
