syntax = "proto3";
// import "google/protobuf/timestamp.proto";

package grpc.rulechain.v1;

service RuleChainService {
    // RuleChain 
    rpc CheckRuleChain(CheckRuleChainRequest) returns (CheckRuleChainResponse) {}
    rpc CreateRuleChain(CreateRuleChainRequest) returns (CreateRuleChainResponse) {}
    rpc DeleteRuleChain(DeleteRuleChainRequest) returns (DeleteRuleChainResponse){}
    rpc UpdateRuleChain(UpdateRuleChainRequest) returns (UpdateRuleChainResponse) {}
    rpc GetRuleChain(GetRuleChainRequest) returns (GetRuleChainResponse) {}
    rpc GetRuleChains(GetRuleChainsRequest) returns (GetRuleChainsResponse) {}
    rpc StartRuleChain(StartRuleChainRequest) returns (StartRuleChainResponse) {}
    rpc StopRuleChain(StopRuleChainRequest) returns (StopRuleChainResponse) {}

    // RuleChain Node Configs
    rpc GetNodeConfigs(GetNodeConfigsRequest) returns (GetNodeConfigsResponse) {}
}

message RuleChain {
    string name = 1;
    string ID = 2;
    string userID = 3;
    string type = 4;
    string domain = 5;
    bytes payload = 6;
    string status = 7;
}

message CheckRuleChainRequest {
    RuleChain rule_chain = 1;
}

message CheckRuleChainResponse {
    bool valid = 1;
    repeated string reasons = 2;
}

message CreateRuleChainRequest {
    RuleChain rule_chain = 1;
    RuleChainConfig config = 2;
}

message RuleChainConfig {
    string endpointURL = 1;
    string port = 2;
}

message CreateRuleChainResponse {
    repeated string reasons = 1;
}
// Delete RuleChain
message DeleteRuleChainRequest {
    string userID = 1;
    string domainID = 2;
    string ruleChainID = 3;
}

message DeleteRuleChainResponse {}

// Update RuleChain
message UpdateRuleChainRequest {
    RuleChain ruleChain = 1;
}

message UpdateRuleChainResponse {}
message GetRuleChainRequest {
    string userID = 1;
    string domain = 2;
    string rule_chainID = 3;
}

message GetRuleChainResponse {
    RuleChain rule_chain = 1;
}

message GetRuleChainsRequest {
    string userID = 1;
}
message GetRuleChainsResponse {
    repeated RuleChain rule_chains = 1;
}

message StartRuleChainRequest {
    string userID = 1;
    string rule_chainID = 2;
}
message StartRuleChainResponse {}

message StopRuleChainRequest {
    string userID = 1;
    string rule_chainID = 2;
}
message StopRuleChainResponse {}

// Node Configs
message NodeConfig {
    string type = 1;
    string category = 2;
    bytes payload = 3;
}
message GetNodeConfigsRequest {}
message GetNodeConfigsResponse {
    repeated NodeConfig node_configs = 1;
}

